Bug 1036500 - Fix crash caused by non-thread safe DOMFile. r=ehsan